added pufferfish companion, added magmacube bossfight, fixed phys on football, fixed coop bugs, added HUD to dungeons